# flitch

./: .gitignore  .isort.cfg  LICENSE  README.md  index.html  pylintrc  pyproject.toml  splitter.html  utils.html
.github/workflows/: ci.yml  pythonpackage.yml  test_ci.yml
flitch/: __init__.py  splitter.py  utils.py
tests/: test_flitch.py  test_splitter.py
