[tool.poetry]
name = "flitch"
version = "0.1.2"
description = "A simple text file splitting utility"
authors = ["Altynbek Orumbayev <aorumbayev@protonmail.com>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/aorumbayev/flitch"
keywords = ["simple", "utility", "text", "splitting"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8.1"
black = {version = "^19.10b0", allow-prereleases = false}
pylint = "^2.4.4"
pdoc3 = "^0.7.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
